--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "react-toastify": "^8.1.0",
-        "sass": "^1.55.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -42,11 +41,14 @@
         ]
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.13",
         "eslint": "8.22.0",
         "eslint-config-standard": "^17.0.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-n": "^15.3.0",
         "eslint-plugin-promise": "^6.0.1",
-        "eslint-plugin-react": "^7.31.8"
+        "eslint-plugin-react": "^7.31.8",
+        "postcss": "^8.4.19",
+        "tailwindcss": "^3.2.4"
     }
 }
